--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -5,9 +5,11 @@
 			<%= submit_tag 'GO!' %>
 <% end %>
 <br>
-Запрос по стране "<b><%= @dest[@dest_country] %></b>" на месяц вперед:
+<%= ' Запрос по стране "' if @dest[@dest_country] %> 
+<b><%= @dest[@dest_country] %></b>
+<%= '" на месяц вперед:' if @dest[@dest_country] %> 
 <br><br>
-<%= @cal unless @cal.empty? %>
+<%= @cal if @cal %>
 <br><br>
 
 Введите желаемую дату путешествия, длительность отдыха и email.
@@ -20,6 +22,5 @@
 <% end %>
 <br>
 <%= @trip_date %> числа вы можете поехать на <%= @days%> ночей в следующие страны:
-<%= @letter_country %>
+<%= @letter_country.join(", ") %>
 <br>
-
