--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -22,8 +22,8 @@
 </div>
 <br>
 
-Введите желаемую дату путешествия, длительность отдыха и email.
-<br>
+Введите желаемую дату путешествия, длительность отдыха и email на который Вам будут отправлены результаты запроса.
+<br><br>
 <%= form_tag do %>
 		<%= date_field_tag('trip_date', @date_start)%>
 		<%= number_field_tag('days', '8', in: 2...16) %>
@@ -31,6 +31,9 @@
 			<%= submit_tag 'GO!' %>
 <% end %>
 <br>
-<%= @trip_date %> числа вы можете поехать на <%= @days%> ночей в следующие страны:
-
-<br>
+<%= 'Информация о том, куда вы можете поехать ' if @user_email %>
+<%= @trip_date %>
+<%= 'числа на ' if @user_email %> 
+<%= @days if @user_email %> 
+<%= 'ночей будет отправлена по адресу: ' if @user_email %>
+<%= @user_email %>
